# LLMOps

./: .env  .env.example  .gitignore  CalenderData.csv  CalenderHeatmap.R  Dockerfile  GGplot_First.R  Mosaic.R  MultiLines.R  Null_Filter.R  Portugal_Fire.R  README.md  Stas.R  TWS.R  buildRAG.ipynb  checkAPI.py  checkEnv.ipynb  cropping.R  data_prep_markitdown.ipynb  finetuneRAG.ipynb  gradioApp_01.py  gradioApp_02.py  hdf2Tiff.R  hdftoTIFF.R  huggingface.ipynb  legend.R  nc2TIFF.R  nc2geoTIFF.R  nc2geoTIFF_Arctic.R  nc2shp.R  ncTOshp_Single.R  nc_to_shp.R  nemo.R  pyproject.toml  requirements.txt  sandbox.ipynb  tempCodeRunnerFile.py  tempFILTER.R
.ipynb_checkpoints/: LlamaIndex-checkpoint.ipynb  README-checkpoint.md  gradioApp_01-checkpoint.py  gradioApp_02-checkpoint.py
Docker Deployment/: .gitignore  Dockerfile.ollama  docker-compose.ollama.yml  docker-compose.yml  test.py
Docker Deployment/notebooks/: ChatBOT.ipynb  ontorag.ipynb
Docker Deployment/notebooks/data/: OntoRaster.toml
IIRS_R/: FP_points.R  Leiraat_Fire .R  OMI_nc2geoTIFF.R  Portugal_Fire.R  Portugal_Fire_LST.R  Portugal_Fire_Legend.R  Spatial_3D.R  Spatial_3D_AOD.R  cropping.R  geotiff_checker.R
OLD/: CalenderData.csv  CalenderHeatmap.R  GGplot_First.R  hdftoTIFF.R  legend.R  nc2TIFF.R  nc2geoTIFF_Arctic.R  tempFILTER.R
OLD/IIRS_R/: OMI_nc2geoTIFF.R  geotiff_checker.R
R docs/: R Libraries.txt  plot_gg.txt
data/: sample.docx  sample.md  sample.txt  sparql.csv  sparql.txt
notebooks/: LangChain_QA_Panel_App.ipynb  ontorag.ipynb  rag.ipynb
