[project]
name = "llm_ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.66.0",
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.0.20",
    "datasets==3.6.0",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "google-generativeai>=0.8.5",
    "gradio>=5.44.1",
    "huggingface>=0.0.1",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "jupyterlab>=4.4.7",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-text-splitters>=0.3.11",
    "llama-index-llms-langchain>=0.7.1",
    "markitdown[all]>=0.1.3",
    "matplotlib>=3.10.6",
    "modal>=1.1.4",
    "numpy>=2.3.3",
    "ollama>=0.5.3",
    "openai>=1.107.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "protobuf==5.29.5",
    "psutil>=7.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "sentence-transformers>=5.1.0",
    "setuptools>=80.9.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "wandb>=0.21.3",
]
